--- a/AndroidDrawerView/app/src/main/res/menu/activity_main_drawer.xml
+++ b/AndroidDrawerView/app/src/main/res/menu/activity_main_drawer.xml
@@ -33,7 +33,7 @@
         android:checkableBehavior="single">
 
         <item
-            android:id="@+id/drawer_item_settings"
+            android:id="@+id/nav_item_settings"
             android:icon="@drawable/ic_remove_red_eye_black_24dp"
             android:title="Laatst bekeken artikelen">
         </item>
