--- a/AndroidDrawerView/app/src/main/res/layout/activity_main.xml
+++ b/AndroidDrawerView/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
+    <!--include app_bar_main in -->
     <include
         layout="@layout/app_bar_main"
         android:layout_width="match_parent"
