--- a/AndroidDrawerView/app/src/main/res/layout/content_main.xml
+++ b/AndroidDrawerView/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,30 +7,119 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.gebruiker.androiddrawerview.MainActivity"
     tools:showIn="@layout/app_bar_main">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:ignore="UselessParent">
+        <TableLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:shrinkColumns="*"
+            android:stretchColumns="*"
+            android:background="#ffffff">
 
-    <FrameLayout
-        android:id="@+id/content_frame"
-        android:layout_width="138dp"
-        android:layout_height="495dp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
+            <!-- Row 1 Starts From Here -->
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal">
 
-    </FrameLayout>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    androiImageViewd:layout_weight="1"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/video"
+                    android:id="@+id/imageButtonRandom"
+                    tools:ignore="ContentDescription" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/video"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-40dp" />
+            </TableRow>
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/inlog"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="164dp" />
+            <!-- Row 2 Starts From Here -->
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal">
 
-</android.support.constraint.ConstraintLayout>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:adjustViewBounds="true"
+
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/inlog"
+                    android:id="@+id/imageButtonVlees"
+                    tools:ignore="ContentDescription" />
+
+            </TableRow>
+
+            <!-- Row 3 Starts From Here -->
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:adjustViewBounds="true"
+
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/categorie"
+                    android:id="@+id/imageButtonVis"
+                    tools:ignore="ContentDescription" />
+
+            </TableRow>
+
+            <!-- Row 4 Starts From Here -->
+
+            <TableRow
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal">
+
+                <ImageView
+                    android:id="@+id/reclame1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:adjustViewBounds="true"
+
+                    android:scaleType="fitEnd"
+                    app:srcCompat="@drawable/reclame1"
+                    tools:ignore="ContentDescription"
+                    android:gravity="center"/>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:adjustViewBounds="true"
+
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/korting"
+                    android:id="@+id/korting"
+                    tools:ignore="ContentDescription"
+                    android:gravity="center"
+                    />
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:adjustViewBounds="true"
+
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/trends"
+                    android:id="@+id/trends"
+                    tools:ignore="ContentDescription"
+                    android:gravity="center"/>
+
+            </TableRow>
+
+        </TableLayout>
+    </ScrollView>
+</RelativeLayout>
+
