--- a/AndroidDrawerView/app/src/main/res/layout/content_main.xml
+++ b/AndroidDrawerView/app/src/main/res/layout/content_main.xml
@@ -28,7 +28,6 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    androiImageViewd:layout_weight="1"
                     android:adjustViewBounds="true"
                     android:scaleType="fitXY"
                     app:srcCompat="@drawable/video"
@@ -116,7 +115,90 @@
                     android:id="@+id/trends"
                     tools:ignore="ContentDescription"
                     android:gravity="center"/>
+            </TableRow>
 
+            <!-- Row 5 Starts From Here -->
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:adjustViewBounds="true"
+
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/reclame2"
+                    android:id="@+id/reclame2"
+                    tools:ignore="ContentDescription" />
+            </TableRow>
+            <!-- Row 5 Starts From Here -->
+            <TableRow
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal">
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/product1"
+                    android:id="@+id/product1"
+                    tools:ignore="ContentDescription" />
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/product2"
+                    android:id="@+id/product2"
+                    tools:ignore="ContentDescription" />
+            </TableRow>
+
+            <!-- Row 6 Starts From Here -->
+            <TableRow
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal">
+
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/klantenservice" />
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/product3"
+                    android:id="@+id/product3"
+                    tools:ignore="ContentDescription" />
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/product4"
+                    android:id="@+id/product4"
+                    tools:ignore="ContentDescription" />
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/product5"
+                    android:id="@+id/product5"
+                    tools:ignore="ContentDescription" />
             </TableRow>
 
         </TableLayout>
