--- a/AndroidDrawerView/app/src/main/res/layout/content_main.xml
+++ b/AndroidDrawerView/app/src/main/res/layout/content_main.xml
@@ -167,7 +167,7 @@
                 android:gravity="center_horizontal">
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/buttonKlantenservice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/klantenservice" />
