--- a/AndroidDrawerView/app/src/main/res/layout/activity_profiel.xml
+++ b/AndroidDrawerView/app/src/main/res/layout/activity_profiel.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -10,22 +11,36 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.gebruiker.androiddrawerview.Profiel">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Account"
-        tools:layout_editor_absoluteX="144dp"
-        tools:layout_editor_absoluteY="256dp"
-        tools:ignore="HardcodedText,MissingConstraints" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:ignore="UselessParent">
+        <TableLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:shrinkColumns="*"
+            android:stretchColumns="*"
+            android:background="#ffffff">
 
-    <Button
-        android:id="@+id/logoutBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button"
-        tools:layout_editor_absoluteX="118dp"
-        tools:layout_editor_absoluteY="124dp"
-        android:onClick="logout"
-        tools:ignore="MissingConstraints" />
-</RelativeLayout>
+            <!-- Row 1 Starts From Here -->
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/video"
+                    android:id="@+id/imageButtonRandom"
+                    tools:ignore="ContentDescription" />
+
+            </TableRow>
+
+        </TableLayout>
+    </ScrollView>
+
+</android.support.design.widget.CoordinatorLayout>
