--- a/AndroidDrawerView/app/src/main/res/layout/content_main.xml
+++ b/AndroidDrawerView/app/src/main/res/layout/content_main.xml
@@ -40,7 +40,8 @@ tools:showIn="@layout/app_bar_main">
         <TableRow
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:id="@+id/trKlant">
 
             <ImageView
                 android:layout_width="match_parent"
@@ -50,7 +51,7 @@ tools:showIn="@layout/app_bar_main">
 
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/inlog"
-                android:id="@+id/imageButtonVlees"
+                android:id="@+id/imageBenJeKlant"
                 tools:ignore="ContentDescription" />
 
         </TableRow>
@@ -59,7 +60,8 @@ tools:showIn="@layout/app_bar_main">
         <TableRow
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:id="@+id/trCategorie">
 
             <ImageView
                 android:layout_width="match_parent"
@@ -69,7 +71,7 @@ tools:showIn="@layout/app_bar_main">
 
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/categorie"
-                android:id="@+id/imageButtonVis"
+                android:id="@+id/imageCategorie"
                 tools:ignore="ContentDescription" />
 
         </TableRow>
@@ -82,7 +84,7 @@ tools:showIn="@layout/app_bar_main">
             android:gravity="center_horizontal">
 
             <ImageView
-                android:id="@+id/reclame1"
+                android:id="@+id/imageMainPicture"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
@@ -100,7 +102,7 @@ tools:showIn="@layout/app_bar_main">
 
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/korting"
-                android:id="@+id/korting"
+                android:id="@+id/imageKorting"
                 tools:ignore="ContentDescription"
                 android:gravity="center"
                 />
@@ -112,7 +114,7 @@ tools:showIn="@layout/app_bar_main">
 
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/trends"
-                android:id="@+id/trends"
+                android:id="@+id/imageTrends"
                 tools:ignore="ContentDescription"
                 android:gravity="center"/>
         </TableRow>
@@ -131,7 +133,7 @@ tools:showIn="@layout/app_bar_main">
 
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/reclame2"
-                android:id="@+id/reclame2"
+                android:id="@+id/imageBanner"
                 tools:ignore="ContentDescription" />
         </TableRow>
         <!-- Row 5 Starts From Here -->
@@ -147,7 +149,7 @@ tools:showIn="@layout/app_bar_main">
                 android:adjustViewBounds="true"
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/product1"
-                android:id="@+id/product1"
+                android:id="@+id/imageProduct1"
                 tools:ignore="ContentDescription" />
             <ImageView
                 android:layout_width="match_parent"
@@ -156,7 +158,7 @@ tools:showIn="@layout/app_bar_main">
                 android:adjustViewBounds="true"
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/product2"
-                android:id="@+id/product2"
+                android:id="@+id/imageProduct2"
                 tools:ignore="ContentDescription" />
         </TableRow>
 
@@ -173,7 +175,7 @@ tools:showIn="@layout/app_bar_main">
                 android:adjustViewBounds="true"
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/product3"
-                android:id="@+id/product3"
+                android:id="@+id/imageProduct3"
                 tools:ignore="ContentDescription" />
             <ImageView
                 android:layout_width="0dp"
@@ -182,7 +184,7 @@ tools:showIn="@layout/app_bar_main">
                 android:adjustViewBounds="true"
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/product4"
-                android:id="@+id/product4"
+                android:id="@+id/imageProduct4"
                 tools:ignore="ContentDescription" />
             <ImageView
                 android:layout_width="0dp"
@@ -191,7 +193,7 @@ tools:showIn="@layout/app_bar_main">
                 android:adjustViewBounds="true"
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/product5"
-                android:id="@+id/product5"
+                android:id="@+id/imageProduct5"
                 tools:ignore="ContentDescription" />
         </TableRow>
         <Button
